# ChangeLog for gnome-base/gvfs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.13 2008/06/30 22:07:24 eva Exp $

*gvfs-0.2.5 (30 Jun 2008)

  30 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org> +gvfs-0.2.5.ebuild:
  bump to 0.2.5,
   * Fix unremovable files in trash (#523139).
   * Fix recursive copy of directories (#522933).

  01 Jun 2008; nixnut <nixnut@gentoo.org> gvfs-0.2.3.ebuild:
  Added ~ppc wrt bug 218794

*gvfs-0.2.4 (27 May 2008)

  27 May 2008; Rémi Cardona <remi@gentoo.org> +gvfs-0.2.4.ebuild:
  bump to 0.2.4, bugfix release

  12 May 2008; Jeroen Roovers <jer@gentoo.org> gvfs-0.2.3.ebuild:
  Marked ~hppa (bug #218794).

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> gvfs-0.2.3.ebuild:
  Added ~ppc64; bug #218794

  21 Apr 2008; <welp@gentoo.org> gvfs-0.2.1.ebuild, gvfs-0.2.2.ebuild,
  gvfs-0.2.3.ebuild:
  keyring to gnome-keyring

  15 Apr 2008; Daniel Gryniewicz <dang@gentoo.org> gvfs-0.2.3.ebuild:
  Check for minimal use flag in libcdio; bug #217385

*gvfs-0.2.3 (09 Apr 2008)

  09 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> +gvfs-0.2.3.ebuild:
  bump to 0.2.3. Fixes in webdav/sftp/ftp backends. Minor bugs and leaks
  fixes.

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org> gvfs-0.2.2.ebuild:
  Add ~alpha/~ia64/sparc

  04 Apr 2008; Daniel Gryniewicz <dang@gentoo.org> gvfs-0.2.1.ebuild:
  Bump dep on libgphoto2; bug #215322

*gvfs-0.2.2 (31 Mar 2008)

  31 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> +gvfs-0.2.2.ebuild:
  bump to 0.2.2, fix crashes and leaks and silent overwrites (sftp). Fix bug
  #215322 by raising media-libs/gphoto2 dependency to 2.4.

  24 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org> gvfs-0.2.1.ebuild:
  add hal dep for cdda

*gvfs-0.2.1 (23 Mar 2008)

  23 Mar 2008; Mart Raudsepp <leio@gentoo.org> +metadata.xml,
  +gvfs-0.2.1.ebuild:
  Initial import of GVFS - the new Virtual Filesystem layer used by GNOME-2.22