@@ -1,22 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST gvfs-0.2.1.tar.bz2 817139 RMD160 af7006ce4d91134d4f81edac70f7883c8a708fba SHA1 bb48e90182ad22fe6be60fc1193e668a8d2ee88f SHA256 bb51a59ab302f156a4ea2ec359be015229432728a4091576267ad4ed6b7c847b
-DIST gvfs-0.2.2.tar.bz2 810873 RMD160 a748a862bb3808cacbc18dfe7315d7713241c0b5 SHA1 963938c163bada7d3e2096a81e0fbd406e71fbad SHA256 1787d32f9823dafbc7ef1722d534269f00419a84508b24569baa05d7bbbe812f
 DIST gvfs-0.2.3.tar.bz2 830289 RMD160 41c35159d5b72ae38ee47922ffe8b7f90d153c2b SHA1 9b2a73b4d0edf77a623eeda001f634f11d8ea74b SHA256 27d73ba99f71d01d306887a19535a3384e9e374db5231f8f7eb2918f8eb0f877
-DIST gvfs-0.2.4.tar.bz2 840339 RMD160 a34d426ab1deaaec1ca059074234adbaff5193c0 SHA1 ff6698c56ca28723d0cc42f1acb72e89bffe635e SHA256 340caacad5070f1be102c25540c294fb3b622dcc9166e3081ad06d791b1c48b2
 DIST gvfs-0.2.5.tar.bz2 826404 RMD160 f1b403c859ce91a5620ca16067d225f8a733857f SHA1 b92b27792fe711319f9f0bba678dc9c074cb5b97 SHA256 f8bb3d32b1fe797190b9d8f2a6b0cdf91e897326a26cf8d9583e41f0d3aae86b
-EBUILD gvfs-0.2.1.ebuild 1451 RMD160 805865ef7adf43f38a30544a6d5bcc8bcdadaa1d SHA1 626788730a53e0f7f1768f5f24f2652904d9d5af SHA256 92b89276320e69f8ea227953cd88328642ab89015c15272f9b13743667b76692
-EBUILD gvfs-0.2.2.ebuild 1455 RMD160 68be76ded8493a7069f81b25485ffefaad58c212 SHA1 424da64446468391b5bb96eeab1110feb06386d9 SHA256 5defcacf75258bd419477ae4cb1c91426717349185eb529452ed31e8cfcc9581
-EBUILD gvfs-0.2.3.ebuild 1737 RMD160 69904d36c3a678ae39e895ee444ab80e8b065d47 SHA1 5aa5d11ef6ec4e565077b188eb9d1df26805986d SHA256 fced5d8c5451ebf69bd0a1cf1dabbefe8435c93cece74acb7a373beb098504f6
-EBUILD gvfs-0.2.4.ebuild 1730 RMD160 0f2b1e3ebcd1d07dc0cdc04afeb356267ee3612b SHA1 a53853c3ca75a58d34bd9f4c2abefd4330d70ea7 SHA256 35a3df5219baa4cc7aecf2f6dad361dbf0c737260e15664368aa572cbb1986ad
-EBUILD gvfs-0.2.5.ebuild 1719 RMD160 05bd1e3152bccceb1e045e2c3b90a6564defb042 SHA1 9a7d45e594e5d722e1ea43c7345332ec1d1b7225 SHA256 fb5039ab18fe3a7128d8539ee5fb78292a865d17d416b9c6c5c34f76f8880c65
-MISC ChangeLog 2088 RMD160 154439aa4bbbdb6ccf2e60c066d807f8701b8842 SHA1 b4319b6f9d131caa9ed2c56001110df99d5560f8 SHA256 75d0b0fe59e5dc8ca6a4bd5e68757193cda086a542da1981036653dc50fa7831
+EBUILD gvfs-0.2.3.ebuild 1724 RMD160 ee5861b66bb2ae9d3a20a376fe0f9e295806402f SHA1 0d93196f98903d4fbeb11f80f0cc5430fdafc2fc SHA256 f5779d15a79f8d4265d0c3de39d0f86d7b83f28ef54ebeed831efa1f8ec8a0e2
+EBUILD gvfs-0.2.5-r1.ebuild 1722 RMD160 a47cfe9ffbae50740d635e444690c580811d4aa8 SHA1 4df86db22668093fe2b079952673840f568e887d SHA256 7337acd80d8b4e78941ec452495d7016a91ae0af7f13944e6a0935115e28267f
+EBUILD gvfs-0.2.5.ebuild 1600 RMD160 56f9c43d9c49c11b32460e5ca1218ec1f397d42f SHA1 95c5a9c8b17a74145b5e42ab70b7b33b7991f7a3 SHA256 e3f2f92108975ad842f0fb1bac86a1f3e30ecdf7cd31e0e21bd949868f716b79
+MISC ChangeLog 2367 RMD160 49b9f8b64e722990b0bcbd8b227e6505b07eebec SHA1 e4fc3279d4da1757a5dc653f65dc62f2a6cba3a7 SHA256 5ca63935d8755840edc475c555a908d1ee48024fd33b41449f8e20e58a43cb17
 MISC metadata.xml 532 RMD160 68d42d72c4e5a799b95ad4d9490adaed357e8581 SHA1 2f8c8204354af53feb5290b43515045f5bba5844 SHA256 da612312217f0248f59bda537a943e5c085829ca929507371d0ece3a7d7dd1ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkhpWSIACgkQ1fmVwcYIWAYsSwCgttXyHbe9Q7x773xm6l2mbC0z
-THEAnjwv65RmZusla27/KOJEIEH1ztEP
-=VMg4
+iEYEARECAAYFAkiLpqAACgkQ1fmVwcYIWAawiQCfcO+BDT5ScBGWlha8vRBD7HDz
+r5wAoKIhI5mV1Wo1S32aW2kObWzEVyTz
+=Cit9
 -----END PGP SIGNATURE-----
