@@ -1,15 +1,15 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/gvfs-0.2.1.ebuild,v 1.5 2008/04/21 17:08:49 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/gvfs-0.2.5-r1.ebuild,v 1.1 2008/07/26 22:35:03 eva Exp $
 
-inherit autotools gnome2
+inherit gnome2 eutils
 
 DESCRIPTION="GNOME Virtual Filesystem Layer"
 HOMEPAGE="http://www.gnome.org"
 
 LICENSE="LGPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc64 ~sparc ~x86"
 IUSE="avahi bluetooth cdda doc fuse gnome gphoto2 hal gnome-keyring samba"
 
 RDEPEND=">=dev-libs/glib-2.16
@@ -41,10 +41,10 @@ DEPEND="${RDEPEND}
 DOCS="AUTHORS ChangeLog NEWS README TODO"
 
 pkg_setup() {
-	G2CONF="--enable-http
+	G2CONF="${G2CONF}
+			--enable-http
 			$(use_enable avahi)
 			$(use_enable bluetooth obexftp)
-			$(use_enable doc gtk-doc)
 			$(use_enable cdda)
 			$(use_enable fuse)
 			$(use_enable gnome gconf)
@@ -52,4 +52,11 @@ pkg_setup() {
 			$(use_enable hal)
 			$(use_enable gnome-keyring keyring)
 			$(use_enable samba)"
+
+	if use cdda && built_with_use dev-libs/libcdio minimal; then
+		ewarn
+		ewarn "CDDA support in gvfs requires dev-libs/libcdio to be built"
+		ewarn "without the minimal USE flag."
+		die "Please re-emerge dev-libs/libcdio without the minimal USE flag"
+	fi
 }
